# my-cv

./: .gitignore  .gitmodules  CLAUDE.md  Doss-Gollin-Biosketch.tex  Doss-Gollin-CV.bbl  Doss-Gollin-CV.tex  README.md  _config.yml  filters.py  generate_cv.py  pyproject.toml
.claude/skills/sync-cv-data/: SKILL.md
.github/workflows/: build-cv.yml  submodule-update.yml  test.yml
coa/: coa_doe.xlsx
docs/: Doss-Gollin-CV.tex
templates/: cv.latextemplate
templates/cv/: grants.tex  languages.tex  teaching.tex
tests/: test_cv_generation.py
